--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,8 @@
     "name": "PetFinder - Adote um amigo",
     "short_name": "PetFinder",
     "description": "Encontre pets para adoção perto de você",
-    "start_url": "/",
+    "start_url": "/PWA-API/",
+    "scope": "/PWA-API/",
     "display": "standalone",
     "background_color": "#FF6B6B",
     "theme_color": "#FF6B6B",
