--- a/manifest.json
+++ b/manifest.json
@@ -8,21 +8,26 @@
     "background_color": "#FF6B6B",
     "theme_color": "#FF6B6B",
     "orientation": "portrait",
+    "categories": ["lifestyle", "social"],
+    "lang": "pt-BR",
     "icons": [
         {
             "src": "images/icon-72x72.jpg",
             "sizes": "72x72",
-            "type": "image/jpeg"
+            "type": "image/jpeg",
+            "purpose": "any maskable"
         },
         {
             "src": "images/icon-96x96.jpg",
             "sizes": "96x96",
-            "type": "image/jpeg"
+            "type": "image/jpeg",
+            "purpose": "any maskable"  // ✅ CORRIGIDO: remova as aspas extras
         },
         {
             "src": "images/icon-144x144.jpg",
             "sizes": "144x144",
-            "type": "image/jpeg"
+            "type": "image/jpeg",
+            "purpose": "any maskable"
         }
     ]
 }
