--- a/manifest.json
+++ b/manifest.json
@@ -1,30 +1,35 @@
 {
-{
-    "name": "PetFinder",
+    "name": "PetFinder - Adote um amigo",
     "short_name": "PetFinder",
-    "description": "Encontre pets para adoção",
-    "start_url": ".",
+    "description": "Encontre pets para adoção perto de você",
+    "start_url": "/PWA-API/",
+    "scope": "/PWA-API/",
     "display": "standalone",
     "background_color": "#FFFFFF",
     "theme_color": "#FF6B6B",
     "orientation": "portrait",
+    "categories": ["lifestyle", "social"],
+    "lang": "pt-BR",
+    "id": "/PWA-API/",
+    "dir": "ltr",
     "icons": [
         {
             "src": "images/icon-72x72.jpg",
             "sizes": "72x72",
-            "type": "image/jpeg"
+            "type": "image/jpeg",
+            "purpose": "any maskable"
         },
         {
             "src": "images/icon-96x96.jpg",
             "sizes": "96x96",
-            "type": "image/jpeg"
+            "type": "image/jpeg",
+            "purpose": "any maskable"
         },
         {
             "src": "images/icon-144x144.jpg",
             "sizes": "144x144",
-            "type": "image/jpeg"
+            "type": "image/jpeg",
+            "purpose": "any maskable"
         }
     ]
 }
-
-
